fixed issue overflowing issue

--- a/css/style.css
+++ b/css/style.css
@@ -936,7 +936,6 @@ a
 }
 
 .projpage .container{
-	display: block;
 	max-width: 1000px;
 	margin: 20px;
 }
